# 2021-C-PL-Solution

./: README.md
10-struct/: CMakeLists.txt  linkedList.c  stackPour.c
3-for-a-while/: CMakeLists.txt  README.md  add.c  binary.c  insertion-sort.c  josephus.c  mines.c  palindrome.c  series.c  sudoku.c
5-function/: CMakeLists.txt  absolute-prime.c  anotherRadix.c  lcp.c  magic-square.c  next-permutation.c  radix.c  sum.c  ternary-search.c
6-recursion/: .gitignore  CMakeLists.txt  decomposition.c  integration.c  max.c  plagiarize.c  tile.c  triangle.c  yanghui.c
7-data-types/: CMakeLists.txt  README.md  brackets.c  max_diff.c  max_diff_another.c  pour.c  stack.c  three_view.c  wine.c
8-pointer/: CMakeLists.txt  interpreter.c  split.c  stringcat.c  substr.c  title.c
