cmake_minimum_required(VERSION 3.20)
project(7_data_types C)

set(CMAKE_C_STANDARD 99)

add_executable(stack stack.c)
add_executable(wine wine.c)
add_executable(brackets brackets.c)
add_executable(pour pour.c)
add_executable(max_diff max_diff.c)
add_executable(max_diff_another max_diff_another.c)
add_executable(three_view three_view.c)
